--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/images/logo_light.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.webp" />
+    <meta
+      name="description"
+      content="Experience the charm of Kyoto, Osaka, and Nara with tailored tours. Explore Japan's history, culture, and cuisine with expert local guides."
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,8 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <title>Explore Kyoto, Osaka, & Nara - Best Guided Tours in Japan</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
