--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Explore Kyoto, Osaka, & Nara - Best Guided Tours in Japan</title>
+    <meta name="google-site-verification" content="lUMcOgz3k9FCuTmULACbcXy5qacw3hGUbOOIq_fOM5Q" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
