Changed icon link

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Explore Kyoto, Osaka, & Nara - Best Guided Tours in Japan</title>
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/logo_light.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/logo_light.png" />  
     <meta name="google-site-verification" content="lUMcOgz3k9FCuTmULACbcXy5qacw3hGUbOOIq_fOM5Q" />
   </head>
   <body>
